RESOLVED FIXED179259
ASSERTION FAILED: NoEventDispatchAssertion::InMainThread::isEventAllowed() || (frameView && frameView->isInChildFrameWithFrameFlattening())
https://bugs.webkit.org/show_bug.cgi?id=179259
Summary ASSERTION FAILED: NoEventDispatchAssertion::InMainThread::isEventAllowed() ||...
Ryan Haddad
Reported 2017-11-03 12:26:16 PDT
ASSERTION FAILED: NoEventDispatchAssertion::InMainThread::isEventAllowed() || (frameView && frameView->isInChildFrameWithFrameFlattening()) /Volumes/Data/slave/sierra-debug/build/Source/WebCore/dom/Document.cpp(1959) : void WebCore::Document::updateLayout() 1 0x11d1dbaad WTFCrash 2 0x11156d781 WebCore::Document::updateLayout() 3 0x111572efe WebCore::Document::updateLayoutIgnorePendingStylesheets(WebCore::Document::RunPostLayoutTasks) 4 0x1116082bf WebCore::Element::boundingClientRect() 5 0x11160864f WebCore::Element::getBoundingClientRect() 6 0x1129c3438 WebCore::VTTRegion::willRemoveTextTrackCueBox(WebCore::VTTCueBox*) 7 0x1129bf247 WebCore::VTTCue::removeDisplayTree() 8 0x1129bf168 WebCore::VTTCue::setIsActive(bool) 9 0x1118da855 WebCore::HTMLMediaElement::updateActiveTextTrackCues(WTF::MediaTime const&) 10 0x1118eed01 WebCore::HTMLMediaElement::userCancelledLoad() 11 0x1118ef258 WebCore::HTMLMediaElement::stopWithoutDestroyingMediaPlayer() 12 0x1118ef47e WebCore::HTMLMediaElement::stop() 13 0x1118ef519 non-virtual thunk to WebCore::HTMLMediaElement::stop() 14 0x1116c7f6e WebCore::ScriptExecutionContext::stopActiveDOMObjects() 15 0x1115769d5 WebCore::Document::stopActiveDOMObjects() 16 0x111576506 WebCore::Document::prepareForDestruction() 17 0x111d97990 WebCore::Frame::setView(WTF::RefPtr<WebCore::FrameView>&&) 18 0x111d99f63 WebCore::Frame::createView(WebCore::IntSize const&, WebCore::Color const&, bool, WebCore::IntSize const&, WebCore::IntRect const&, bool, WebCore::ScrollbarMode, bool, WebCore::ScrollbarMode, bool) 19 0x1062d5462 WebKit::WebFrameLoaderClient::transitionToCommittedForNewPage() 20 0x111c1fed6 WebCore::FrameLoader::transitionToCommitted(WebCore::CachedPage*) 21 0x111c1ef6a WebCore::FrameLoader::commitProvisionalLoad() 22 0x111bd485c WebCore::DocumentLoader::commitIfReady() 23 0x111bd4b82 WebCore::DocumentLoader::finishedLoading() 24 0x111bdc6d5 WebCore::DocumentLoader::maybeLoadEmpty() 25 0x111bdc85d WebCore::DocumentLoader::startLoadingMainResource() 26 0x111c3a2b4 WebCore::FrameLoader::continueLoadAfterNavigationPolicy(WebCore::ResourceRequest const&, WebCore::FormState*, bool, WebCore::AllowNavigationToInvalidURL)::$_8::operator()() const 27 0x111c39ff9 WTF::Function<void ()>::CallableWrapper<WebCore::FrameLoader::continueLoadAfterNavigationPolicy(WebCore::ResourceRequest const&, WebCore::FormState*, bool, WebCore::AllowNavigationToInvalidURL)::$_8>::call() 28 0x10f956deb WTF::Function<void ()>::operator()() const 29 0x111c1d2cd WebCore::FrameLoader::continueLoadAfterNavigationPolicy(WebCore::ResourceRequest const&, WebCore::FormState*, bool, WebCore::AllowNavigationToInvalidURL) 30 0x111c38be8 WebCore::FrameLoader::loadWithDocumentLoader(WebCore::DocumentLoader*, WebCore::FrameLoadType, WebCore::FormState*, WebCore::AllowNavigationToInvalidURL)::$_6::operator()(WebCore::ResourceRequest const&, WebCore::FormState*, bool) const 31 0x111c38b72 WTF::Function<void (WebCore::ResourceRequest const&, WebCore::FormState*, bool)>::CallableWrapper<WebCore::FrameLoader::loadWithDocumentLoader(WebCore::DocumentLoader*, WebCore::FrameLoadType, WebCore::FormState*, WebCore::AllowNavigationToInvalidURL)::$_6>::call(WebCore::ResourceRequest const&, WebCore::FormState*, bool) https://build.webkit.org/results/Apple%20Sierra%20Debug%20WK2%20(Tests)/r224399%20(3860)/results.html
Attachments
Fixes the assertions (2.48 KB, patch)
2017-11-03 16:46 PDT, Ryosuke Niwa
youennf: review+
Ryan Haddad
Comment 1 2017-11-03 12:27:48 PDT
CRASHING TEST: media/track/regions-webvtt/vtt-region-dom-layout.html CRASHING TEST: media/video-main-content-autoplay.html CRASHING TEST: media/video-main-content-allow-then-scroll.html
Ryosuke Niwa
Comment 2 2017-11-03 12:57:41 PDT
Looking...
Ryosuke Niwa
Comment 3 2017-11-03 16:46:50 PDT
Created attachment 325989 [details] Fixes the assertions
Radar WebKit Bug Importer
Comment 4 2017-11-03 16:48:44 PDT
Build Bot
Comment 5 2017-11-03 16:49:26 PDT
Attachment 325989 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:10: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
youenn fablet
Comment 6 2017-11-03 16:52:31 PDT
Comment on attachment 325989 [details] Fixes the assertions It seems like we can easily fall into that trap here or there... View in context: https://bugs.webkit.org/attachment.cgi?id=325989&action=review > Source/WebCore/ChangeLog:10 > + No new tests (OOPS!). Remove this for landing.
Ryosuke Niwa
Comment 7 2017-11-03 17:35:02 PDT
Thanks for the review!
Ryosuke Niwa
Comment 8 2017-11-03 17:36:11 PDT
Note You need to log in before you can comment on or make changes to this bug.